--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "readable-stream": "^3.4.0",
     "stack-trace": "0.0.x",
     "triple-beam": "^1.3.0",
-    "winston-transport": "^4.4.0"
+    "winston-transport": "git://github.com/winston/winston-transport"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
