--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "winston",
+  "name": "@normed/winston",
   "description": "A logger for just about everything.",
   "version": "3.3.3",
   "author": "Charlie Robbins <charlie.robbins@gmail.com>",
@@ -34,7 +34,7 @@
     "readable-stream": "^3.4.0",
     "stack-trace": "0.0.x",
     "triple-beam": "^1.3.0",
-    "winston-transport": "git://github.com/winston/winston-transport"
+    "@normed/winston-transport": "^4.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
